gcc3 compatibility (thanks to shellz.net's
NuC for reporting)
--Luke
===================================

Fixed issue in s_user.c where +H opers
could be identified by normal users in
a trivial manner (thanks to Magnet from
epiknet)
--Luke
===================================

s_user.c fixes
basically, /whois doesn't display snotice
if you're +W and do it to yourself
/who the same
and "is a secure connection" is no longer
bold (it was lame)
--Luke
===================================

s_serv.c fixes
fixed map bug that allowed you to trivially
find a hidden U lined server (hopefully)
--Luke
===================================

rmed zip.c (not used at all.)
and zip.h and anything related to zip
--Luke
===================================

E lines now match glines, zlines, shuns
(if you say yes in config)
--Luke
===================================

map bug still exists (earlier fix made it
worse)...removed.
--Luke
===================================

/adchat bug that sends it to coadmins twice
(coadmins are actually server admins as far
as the ircd is concerned for most purposes, no
need to send to both UMODES)
--Luke
===================================

rewrote m_kick almost entirely (it sucked)
--Luke
===================================

newdns.c removed - another useless file
--Luke
===================================

------------------------------------------------
Beta2
------------------------------------------------

ripped cloak.c from 3.2, and added Config
options as needed.
--Luke
===================================

Fixed 3 svsnoops bugs, so it appears to be
actually working now...
--Luke
===================================

+S users no longer show channels in /whois
--Luke
===================================

Added a gzline command. I use it with bopm on
my network all the time, and am getting
sick of readding it after each new release.
Additionally, I think it's a useful command
for anyone to have.
--Luke
===================================