@@ -2,10 +2,10 @@
 =            UnrealIRCd v3.1.3                =
 ===============================================
  Was brought to you by:
-  * Stskeeps  <stskeeps@tspre.org>
+  * Stskeeps  <stskeeps@unrealircd.com>
   * codemastr <codemastr@unrealircd.com>
   * DrBin     <drbin@unrealircd.com>
-  * Luke      <luke@unrealircd.org>
+  * Luke      <luke@unrealircd.com>
 
  Precenses on the Internet:
   * http://www.unrealircd.com
